🎉 feat(FunctionDsl): add buildFunctionDeclaration function for KFunction in commonMain